@startuml

title __BABENKODYDYKDIPLOMAPROJECT's Class Diagram__\n

  package GeneticRace.condition {
    class ConditionController {
    }
  }
  

  package GeneticRace.condition {
    class ConditionModel {
    }
  }
  

  package GeneticRace.fsLook {
    class FSLookController {
    }
  }
  

  package GeneticRace.fsLook {
    class FSLookModel {
    }
  }
  

  package GeneticRace.firstStage {
    class FirstStageController {
    }
  }
  

  package GeneticRace.firstStage {
    class FirstStageModel {
    }
  }
  

  package GeneticRace.login {
    class LoginController {
    }
  }
  

  package GeneticRace.login {
    class LoginModel {
    }
  }
  

  package GeneticRace.mainMenu {
    class MainMenuController {
    }
  }
  

  package GeneticRace.classes {
    class Patient {
    }
  }
  

  package GeneticRace.patientChooser {
    class PatientChooserController {
    }
  }
  

  package GeneticRace.repositories {
    class PatientRepository {
    }
  }
  

  package GeneticRace.profile {
    class ProfileController {
    }
  }
  

  package GeneticRace.profile {
    class ProfileModel {
    }
  }
  

  package GeneticRace.execution {
    class Program {
    }
  }
  

  package GeneticRace.ssLook {
    class SSLookController {
    }
  }
  

  package GeneticRace.ssLook {
    class SSLookModel {
    }
  }
  

  package GeneticRace.secondStage {
    class SecondStageController {
    }
  }
  

  package GeneticRace.secondStage {
    class SecondStageModel {
    }
  }
  

  ConditionController o-- ConditionModel : conditionModel
  FirstStageController o-- FirstStageModel : fsModel
  LoginController o-- LoginModel : loginModel
  MainMenuController o-- PatientChooserController : controller
  ProfileController o-- ProfileModel : profileModel
  Program -up-|> Application
  SecondStageController o-- SecondStageModel : ssModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
